<resources>

    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">YouTableAnapa</string>
    <string name="my_ads">Мои обьявления</string>
    <string name="cars_ads">Машины</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="smartphone_ads">Смартфоны</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="account">Аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_or_sign_up">Войдите или зарегестрируйтесь</string>
    <!-- Edit Activity -->
    <string name="edit_ac_title">Название</string>
    <string name="edit_ac_price">Цена</string>
    <string name="edit_ac_discription">Описание</string>
    <string name="edit_ac_tel">Телефон</string>

    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>
    <!-- Post Adapter -->
    <string name="delete_title">Удалить объявление?</string>
    <string name="delete_message">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="item_deleted">Объявление удалилось успешно!</string>
    <!-- Show Activity -->
    <string name="price">Цена:</string>
    <string name="tel">Телефон:</string>
    <!-- Choose Image Activity -->
    <string name="main_image">Фото 1</string>
    <string name="image2">Фото 2</string>
    <string name="image3">Фото 3</string>

</resources>